# dd-python

./: README.md  pyproject.toml
.github/workflows/: main.yml
smartschedule/optimization/: __init__.py  capacity_dimension.py  item.py  optimization_facade.py  result.py  total_capacity.py  total_weight.py  weight_dimension.py
smartschedule/parallelization/: parallel_stages.py  parallel_stages_list.py  stage.py  stage_parallelization.py
smartschedule/planning/: __init__.py
smartschedule/planning/parallelization/: parallel_stages.py  parallel_stages_list.py  sorted_nodes_to_parallelized_stages.py  stage.py  stage_parallelization.py  stages_to_nodes.py
smartschedule/shared/: __init__.py  time_slot.py
smartschedule/simulation/: __init__.py  available_resource_capability.py  capability.py  demand.py  demands.py  project_id.py  result.py  simulated_capabilities.py  simulated_project.py  simulation_facade.py  time_slot.py
smartschedule/sorter/: __init__.py  feedback_arc_set_on_graph.py  graph_topological_sort.py  node.py  nodes.py  sorted_nodes.py
smartschedule/utils/: pipe.py
tests/: test_parallelization.py
tests/optimization/: capability_capacity_dimension.py  test_optimization.py  test_optimization_for_timed_capabilities.py
tests/planning/parallelization/: test_parallelization.py
tests/shared/: test_time_slot.py
tests/simulation/: available_capabilities_builder.py  conftest.py  simulated_projects_builder.py  test_simulation_scenarios.py
tests/sorter/: test_feedback_arc_set_on_graph.py  test_graph_topological_sort.py
