[tool.poetry]
name = "smartschedule"
version = "0.1.0"
description = "Domain Drivers Smartschedule"
authors = ["Piotr Wysocki <hello@piotrwysocki.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
attrs = "^23.2.0"
pendulum = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.3"
pyright = "^1.1.363"
import-linter = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["I", "W", "E", "F", "PT"]

[tool.importlinter]
root_package = "smartschedule"

[tool.pytest.ini_options]
markers = [
    "unit: unit tests",
    "int: integration tests",
]

[[tool.importlinter.contracts]]
name = "sorter does not depend on planning"
type = "forbidden"
source_modules = ["smartschedule.sorter"]
forbidden_modules = ["smartschedule.planning", "smartschedule.simulation"]
